--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,3 +9,8 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node_exporter:9100']
+  
+  - job_name: 'telegram_bot'
+    static_configs:
+      - targets: ['bot:4321'] 
+    metrics_path: '/metrics'
